# meterly

./: .gitignore  ORG_REPORTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
fixtures/: README.md
fixtures/claude/: basic.jsonl  cache_record.jsonl  legacy_missing_cache_fields.jsonl  malformed.jsonl  resume_duplicate_a.jsonl  resume_duplicate_b.jsonl
fixtures/codex/: basic_session.jsonl  info_null.jsonl  malformed.jsonl  rate_limits.jsonl  repeated_total.jsonl  subset_semantics.jsonl  subset_violation.jsonl  total_reset.jsonl
fixtures/codex/dup/archived_sessions/: rollout-2026-01-02T00-00-00-0195bbbb-2222-7000-8000-000000000002.jsonl
fixtures/codex/dup/sessions/2026/01/01/: rollout-2026-01-01T00-00-00-0195aaaa-1111-7000-8000-000000000001.jsonl
scripts/: capture_fixtures.py
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  aggregate.rs  cache.rs  commands.rs  devicesync.rs  lib.rs  logging.rs  main.rs  model.rs  orgreport.rs  pricing.rs  scheduler.rs  traynum.rs
src-tauri/src/sources/: claude_code.rs  claude_usage.rs  codex.rs  codex_usage.rs  mod.rs
src/lib/: Sparkline.svelte  format.ts  ipc.ts
src/lib/dashboard/: Dashboard.svelte  charts.ts
src/lib/popover/: PopoverSummary.svelte
src/lib/settings/: Settings.svelte
